--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-body {
+* {
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +10,21 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+:root {
+  font-size: 16px; /* Set the root font size to 16px */
+  /*Colors for light theme*/
+  --light-theme-bg: #111111;
+  --light-theme-primary: #777777;
+  --light-theme-secondary: #C0C0C0;
+  --light-theme-accent: #F8D6FA;
+  --light-theme-font-color: #555555;
+  /*Colors for dark theme*/
+  --dark-theme-scale-5: #000000;
+  --dark-theme-scale-4: #0d1117;
+  --dark-theme-scale-3: #161b22;
+  --dark-theme-scale-2: #30363d;
+  --dark-theme-scale-1: #F25287;
+  --dark-theme-font-color: #ffffff;
 }
