redesign ux ui structures and apply in-app navigation

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
-.slot {
+.app-container {
     height: 100vh;
     display: flex;
-    flex-direction: column;
+}
+
+.content-container {
+    width: 100%;
 }
